--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="description" content="This online player is a simple and very flexible viewer, player for SWF flash file with Google Drive. Download a swf, flash, and game file from Google Drive, and Play the file directly.">
 <meta name="keywords" content="swf viewer for google drive, cloud swf viewer, cloud swf player, flash viewer, swf player, online flash player, online swf viewer, google drive game, flash viewer for drive, flash player for drive, flash emulator, swf emulator, game tv, gamer podcast">		
 
-<meta property="og:title" content="Cloud SWF, Flash Player with Drive"> 
-<meta property="og:description" content="This online player is a simple and very flexible viewer, player for SWF flash file with Google Drive. Download a swf, flash, and game file from Google Drive, and Play the file directly.">
+<meta property="og:title" content="Приложение Гача Лайф ОНЛАЙН"> 
+<meta property="og:description" content="Играйте в Гача Лайф ОНЛАЙН, пока только на ПК https://vk.com/app6947526! Берите пост и к друзьям - играть ОНЛАЙН!">
 <meta property="og:type" content="website">
 
 <style>
