--- a/index.html
+++ b/index.html
@@ -270,18 +270,27 @@ init2();
 <div id='vphistory'></div>
 
 <div id="codearea" style="margin-bottom:15px;margin-top:5px"></div>
-
-<!-- Put this script tag to the <head> of your page -->
-<script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
-
+	
+	
+<script src="//vk.com/js/api/xd_connection.js?2"></script>
+<script src="https://ad.mail.ru/static/admanhtml/rbadman-html5.min.js"></script>
+<script src="https://vk.com/js/api/adman_init.js"></script>
+<script src="https://js.appscentrum.com/scr/preroll.js"></script>
 <script type="text/javascript">
-  VK.init({apiId: 6943911, onlyWidgets: true});
-</script>
-
-<!-- Put this div tag to the place, where the Comments block will be -->
-<div id="vk_comments"></div>
-<script type="text/javascript">
-VK.Widgets.Comments("vk_comments", {limit: 5, width: "760", attach: "*"});
+window.addEventListener('load', function() {
+var user_id = null;
+var app_id = 6947526;
+admanInit({
+  user_id: user_id,
+  app_id: app_id,
+  type: 'preloader'
+}, onAdsReady, onNoAds);
+function onAdsReady(adman) {
+  adman.onStarted(function () { admanStat(app_id, user_id); });
+  adman.start('preroll');
+};
+function onNoAds() {};
+});
 </script>
 
 <tr><td align=center>
