--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ function init2(){
 }
 init2();
 </script>
-
+<div hidden>
 <table style="white-space:nowrap"><tr>
 <td>Ширина<td><input type="range" id="size_width" min=100 max=900 step="1" value="540" style="width:150px;padding:0px;" onchange="size_width_onchange(this)">
 <td><input type=number id="size_width_n" style="width:65px" min=100 max=900 value="540" onchange="size_width_n_onchange(this)">
@@ -269,7 +269,7 @@ init2();
 <div id='vphistory'></div>
 
 <div id="codearea" style="margin-bottom:15px;margin-top:5px"></div>
-
+</div>
 	
 	
 <script src="//vk.com/js/api/xd_connection.js?2"></script>
