--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ function proc_sample(filename){
 	var resp={};
 	resp.id='(Sample) '+filename;
 	resp.title=resp.id;
-	resp.downloadUrl="https://thumbsdb.herokuapp.com/flashplayer/sample/"+filename;
+	resp.downloadUrl="https://youapp-space.github.io/"+filename;
 	resp.issample=true;
 	gd_loadfile('',resp);
 }
