--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ background-size:41px;
 margin: -16px 0 0 -16px;}
 </style>  
 <body>
-<div id="p_prldr"><div class="contpre"><span class="svg_anm"></span><br>Подождите<br><small>идет загрузка</small></div></div>
+<div id="p_prldr"><div class="contpre"><span class="svg_anm"></span><br>Подождите<br><small>идет загрузка</small><td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons></div></div>
 
 
 <div style="margin-top:2px;margin-bottom:1px">
