--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ left: 0;
 top: 0;
 right:0;
 bottom:0;
+background: #edeef0;
 z-index: 30;}
  
 .contpre small{font-size:25px;}
@@ -298,8 +299,6 @@ init2();
 <td><button id="btn_close" disabled=true onclick='proc_close()' style="font-size:13px">Close</button>
 </table>
 <div id='vphistory'></div>
-
-<div id="codearea" style="margin-bottom:15px;margin-top:5px"></div>
 	
 	
 <script src="//vk.com/js/api/xd_connection.js?2"></script>
