--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ background-size:41px;
 margin: -16px 0 0 -16px;}
 </style>  
 <body>
-<div id="p_prldr"><div class="contpre"><span id="codearea" style="margin-bottom:15px;margin-top:5px"></span><br><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons><br><small>идет загрузка</small><td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">ИГРАТЬ</buttons></div></div>
+<div id="p_prldr"><div class="contpre"><span id="codearea"></span><br><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons><br><small>идет загрузка</small><td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">ИГРАТЬ</buttons></div></div>
 
 
 <div style="margin-top:2px;margin-bottom:1px">
@@ -299,6 +299,8 @@ init2();
 <td><button id="btn_close" disabled=true onclick='proc_close()' style="font-size:13px">Close</button>
 </table>
 <div id='vphistory'></div>
+
+<div id="codearea" style="margin-bottom:15px;margin-top:5px"></div>
 	
 	
 <script src="//vk.com/js/api/xd_connection.js?2"></script>
