--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ letter-spacing:-2px;
 text-align:center;
 line-height:35px;}
  
-#p_prldr .svg_anm {
+#p_prldr .codearea{
 position: absolute;
 width: 41px;
 height: 41px;
