--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@ line-height:35px;}
  
 #p_prldr .codearea{
 position: absolute;
-width: 41px;
-height: 41px;
+width: 100%;
+height: 100%;
 background: url(https://a.deviantart.net/avatars/d/a/darkyoshi973.gif) center center no-repeat;
-background-size:41px;    
+background-size:100%;    
 margin: -16px 0 0 -16px;}
 </style>  
 <body>
