--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ z-index: 30;}
 position: absolute;
 width: 100%;
 height: 100%;
-background: url(https://a.deviantart.net/avatars/d/a/darkyoshi973.gif) center center no-repeat;
+background: id="codearea" center center no-repeat;
 background-size:100%;    
 margin: -16px 0 0 -16px;}
 </style>  
