--- a/index.html
+++ b/index.html
@@ -168,19 +168,34 @@ bottom:0;
 background: #edeef0;
 z-index: 30;}
  
+.contpre small{font-size:25px;}
+ 
+.contpre{
+width: 250px;
+height: 100px;
+position: absolute;
+left: 50%;top: 48%;
+margin-left:-125px;
+margin-top:-75px;
+color:#696969;
+font-size:40px;
+letter-spacing:-2px; 
+text-align:center;
+line-height:35px;}
+ 
 #p_prldr .codearea{
 position: absolute;
 width: 100%;
 height: 100%;
-background: id="codearea" center center no-repeat;
+background: url(https://a.deviantart.net/avatars/d/a/darkyoshi973.gif) center center no-repeat;
 background-size:100%;    
 margin: -16px 0 0 -16px;}
 </style>  
 <body>
-<div id="p_prldr"><div class="contpre"><span class="codearea"></span><br><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons><br><small>идет загрузка</small><td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">ИГРАТЬ</buttons></div></div>
+<div id="p_prldr"><div class="contpre"><span id="codearea"></span><br><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons><br><small>идет загрузка</small><td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">ИГРАТЬ</buttons></div></div>
 
 
-<div style="margin-top:2px;margin-bottom:1px">
+<div style="margin-top:2px;margin-bottom:1px"> 
 <table><tr>
 <td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons>
 
