--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <style> 
 body { 
-        background: #edeef0;
+        background: #000000;
 } 
 buttons {
   display: inline-block;
@@ -167,21 +167,6 @@ right:0;
 bottom:0;
 background: #edeef0;
 z-index: 30;}
- 
-.contpre small{font-size:25px;}
- 
-.contpre{
-width: 250px;
-height: 100px;
-position: absolute;
-left: 50%;top: 48%;
-margin-left:-125px;
-margin-top:-75px;
-color:#696969;
-font-size:40px;
-letter-spacing:-2px; 
-text-align:center;
-line-height:35px;}
  
 #p_prldr .codearea{
 position: absolute;
