--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ margin: -16px 0 0 -16px;}
 
 <div style="margin-top:2px;margin-bottom:1px"> 
 <table><tr>
-<td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons>
+<td><buttons &nbsp; class="button" href="#" onclick="proc_sample('GachaLife.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons>
 
 <script>document.getElementById("dfile1").innerHTML='<input type="file" id="fileload1" name="files[]" style="width:230px">';</script>			
 </table>
