--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@ function init2(){
 init2();
 </script>
 <table style="white-space:nowrap"><tr>
-<td>Ширина<td><input type="range" id="size_width" min=100 max=900 step="1" value="100%" style="width:150px;padding:0px;" onchange="size_width_onchange(this)">
-<td><input type=number id="size_width_n" style="width:65px" min=100 max=900 value="100%" onchange="size_width_n_onchange(this)">
+<td>Ширина<td><input type="range" id="size_width" min=100 max=900 step="1" value="1280" style="width:150px;padding:0px;" onchange="size_width_onchange(this)">
+<td><input type=number id="size_width_n" style="width:65px" min=100 max=900 value="1280" onchange="size_width_n_onchange(this)">
 <td>
-<td>Высота<td><input type="range" id="size_height" min=100 max=900 step="1" value="100%" style="width:150px;padding:0px;" onchange="size_width_onchange(this)">
-<td><input type=number id="size_height_n" style="width:65px" min=100 max=900 value="100%" onchange="size_width_n_onchange(this)">
+<td>Высота<td><input type="range" id="size_height" min=100 max=900 step="1" value="720" style="width:150px;padding:0px;" onchange="size_width_onchange(this)">
+<td><input type=number id="size_height_n" style="width:65px" min=100 max=900 value="720" onchange="size_width_n_onchange(this)">
 <td><button id="btn_save" disabled=true onclick='proc_save()' style="font-size:13px" title="Save and keep this game's width, height">Save Size</button>
 <td>
 <td><button id="btn_refresh" disabled=true onclick='proc_refresh()' style="font-size:13px">Refresh</button>
