--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@ background-size:100%;
 margin: -16px 0 0 -16px;}
 </style>  
 <body>
-<div id="p_prldr"><div class="contpre"><span id="codearea"></span><br><buttons &nbsp; class="button" href="#" onclick="proc_sample('GachaLife.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons><br><small>идет загрузка</small><td><buttons &nbsp; class="button" href="#" onclick="proc_sample('Tetris.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">ИГРАТЬ</buttons></div></div>
-
+<div id="p_prldr"><div class="contpre"><span id="codearea"></span><br><buttons &nbsp; class="button" href="#" onclick="proc_sample('GachaLife.swf');return false;" title="Запустить" style="font-size:15px" width=16 align="absmiddle">Start Gacha Life</buttons><br><small>идет загрузка</small><div id="downlink" style="height:18px;margin-bottom:3px">Через две минуты, вы откроете мир Gacha Life ONLINE</div></div></div>
 
 <div style="margin-top:2px;margin-bottom:1px"> 
 <table><tr>
