--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <style> 
 body { 
-        background: #000000;
+        background: #FFFFFF;
 } 
 buttons {
   display: inline-block;
   display: inline-block;
-  background: #5181b8;
+  background: #FAB005;
   color: #fff;
   padding: 8px 50px;
   border-radius: 3px;
@@ -165,7 +165,7 @@ left: 0;
 top: 0;
 right:0;
 bottom:0;
-background: #edeef0;
+background: #FFFFFF;
 z-index: 30;}
  
 #p_prldr .codearea{
